fix recently decoded dish not work
(cherry picked from commit f2241a56d4b804956b530fff3d33e8caf8952e61)

--- a/app/presentation/views_html/home.slim
+++ b/app/presentation/views_html/home.slim
@@ -41,7 +41,9 @@ div.container.mt-5
     section.history-section
       .card
         .card-header.bg-light
-          h2.h4.mb-0 Recently Decoded Dishes
+          h2.h4.mb-0 
+            | Recently Decoded Dishes 
+            span.text-muted = "(#{dishes.count})"
         .card-body
           ul.list-group.list-group-flush
             - dishes.each do |dish|
